# gg

./: Cargo.toml
.github/workflows/: release.yml
gg/: Cargo.toml
gg-config/: Cargo.toml
gg-config/src/: config.rs  lib.rs  result.rs
gg-config/src/config/: load.rs  parse.rs
gg-config/src/serde/: mod.rs  string_or_struct.rs
gg-git/: Cargo.toml
gg-git/src/: g.rs  lib.rs  result.rs  root.rs
gg-tui/: Cargo.toml
gg-tui/src/: console.rs
gg/src/: cmds.rs  lib.rs  main.rs  result.rs
gg/src/cmds/: run.rs
gg/wix/: main.wxs
