[workspace]
resolver = "2"
members = [
    "gg",
    "gg-config",
    "gg-git",
    "gg-tui",
]
default-members = ["gg"]

[workspace.dependencies]
gg-git = { path = "./gg-git" }
gg-config = { path = "./gg-config" }
gg-tui = { path = "./gg-tui" }

thiserror = "1.0.56"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
console = "0.15.8"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "ImSingee/gg"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "upload"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
