[package]
name = "gg-config"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gg-git.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
paste = "1.0.14"